--- a/Mafia/Base.lproj/Main.storyboard
+++ b/Mafia/Base.lproj/Main.storyboard
@@ -117,18 +117,11 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Без имени" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G0i-4V-J3e">
-                                                    <rect key="frame" x="61" y="8" width="140" height="21"/>
+                                                    <rect key="frame" x="11" y="8" width="140" height="21"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Роль" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Ag-Ee-Aup">
-                                                    <rect key="frame" x="61" y="30" width="42" height="21"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
-                                                    <color key="highlightedColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                                 </label>
                                                 <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="sSg-6A-T35">
                                                     <rect key="frame" x="159" y="7" width="182" height="44"/>
@@ -154,14 +147,13 @@
                                                         </button>
                                                     </subviews>
                                                 </stackView>
-                                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Uyt-yl-lHs">
-                                                    <rect key="frame" x="8" y="7" width="45" height="44"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Роль" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Ag-Ee-Aup">
+                                                    <rect key="frame" x="11" y="30" width="90" height="21"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <state key="normal" image="icon_people"/>
-                                                    <connections>
-                                                        <action selector="pushSetRole:" destination="oNQ-Ax-mL0" eventType="touchUpInside" id="ZdN-ci-C5t"/>
-                                                    </connections>
-                                                </button>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <color key="highlightedColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                                </label>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="sSg-6A-T35" firstAttribute="top" secondItem="Qm7-rL-tWm" secondAttribute="top" constant="7" id="UtN-Nc-yoY"/>
@@ -174,7 +166,6 @@
                                             <outlet property="killButton" destination="W8u-Ti-dA5" id="C1z-gW-THf"/>
                                             <outlet property="nameLabel" destination="G0i-4V-J3e" id="JTC-j3-rP4"/>
                                             <outlet property="roleLabel" destination="1Ag-Ee-Aup" id="Soz-kw-Vkn"/>
-                                            <outlet property="setRoleButton" destination="Uyt-yl-lHs" id="fUQ-yp-0om"/>
                                             <outlet property="silenceButton" destination="cXa-iy-R50" id="I1Z-2s-Ojp"/>
                                             <segue destination="XN1-Lj-Oc9" kind="show" identifier="ShowDetail" id="s11-xN-jG5"/>
                                         </connections>
@@ -252,7 +243,7 @@
                                                         <action selector="chooseButton:" destination="XN1-Lj-Oc9" eventType="touchUpInside" id="mTx-dm-hwN"/>
                                                     </connections>
                                                 </button>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Имя игрока" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mBo-Lr-hgo">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Заголовок" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mBo-Lr-hgo">
                                                     <rect key="frame" x="8" y="12" width="114" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
@@ -460,7 +451,6 @@
         <image name="icon_loop" width="44" height="44"/>
         <image name="icon_medic" width="44" height="44"/>
         <image name="icon_night_love" width="44" height="44"/>
-        <image name="icon_people" width="44" height="44"/>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="s11-xN-jG5"/>
